# ntcir-datasearch

./: .gitignore  .gitmodules  README.md  pyproject.toml  tasks.py
.circleci/: config.yml
baselines/: preprocessor_base.py  preprocessor_en.py  preprocessor_ja.py
