[tool.poetry]
name = "ntcir-datasearch"
version = "0.1.0"
description = ""
authors = ["mpkato <mpkato@acm.org>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.4.1"
tqdm = "^4.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
